update build environment information (#133)
* skeleton of 3.46 release notes

* clean up release notes

* final draft of release notes for 3.46

* provide more features for release

* update release description

* v3.46: migration to allow users to view connectors

* update developers guide

* further updates to dependencies

* more updates for dependencies

* add container info; make minimal changes to run instructions

* add docker for macos

* fix formatting

* remove phantomjs dependency